--- a/package.json
+++ b/package.json
@@ -14,16 +14,26 @@
     "generate": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "2.30.0",
-    "express": "^4.17.1"
+    "@prisma/client": "^4.3.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "cross-fetch": "^3.1.5",
+    "express": "^4.18.1",
+    "node-cron": "^3.0.2",
+    "object-mapper": "^6.2.0",
+    "pino": "^8.5.0",
+    "pino-http": "^8.2.0",
+    "pino-pretty": "^9.1.0"
   },
   "devDependencies": {
-    "prisma": "2.30.0",
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.22",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.185",
+    "@types/node": "^14.18.28",
+    "@types/node-cron": "^3.0.4",
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
+    "prisma": "^4.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   }
 }
