--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "@types/swagger-ui-express": "^4.1.3",
     "cross-fetch": "^3.1.5",
     "express": "^4.18.1",
+    "jest": "^29.0.3",
     "node-cron": "^3.0.2",
     "object-mapper": "^6.2.0",
     "pino": "^8.5.0",
     "pino-http": "^8.2.0",
-    "pino-pretty": "^9.1.0"
+    "pino-pretty": "^9.1.0",
+    "superagent": "^8.0.0",
+    "supertest": "^6.2.4",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -30,6 +35,7 @@
     "@types/lodash": "^4.14.185",
     "@types/node": "^14.18.28",
     "@types/node-cron": "^3.0.4",
+    "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "prisma": "^4.3.0",
