--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "expressjs-prisma",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Jake Runzer",
+  "main": "src/server.ts",
+  "author": "Mtias Agelvis",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/server.ts",
     "build": "yarn migrate:deploy && tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "migrate:status": "prisma migrate status",
-    "generate": "prisma generate"
+    "generate": "prisma generate",
+    "test": "dotenv -e .env.test -- prisma migrate reset --force && jest"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "@types/swagger-ui-express": "^4.1.3",
     "cross-fetch": "^3.1.5",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "jest": "^29.0.3",
+    "jest-mock-extended": "3.0.0-beta1",
     "node-cron": "^3.0.2",
     "object-mapper": "^6.2.0",
     "pino": "^8.5.0",
@@ -32,6 +38,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.2",
     "@types/lodash": "^4.14.185",
     "@types/node": "^14.18.28",
     "@types/node-cron": "^3.0.4",
@@ -39,6 +46,7 @@
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "prisma": "^4.3.0",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
