--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL='postgresql://postgres@localhost:5432/reign_test'
+DATABASE_URL='postgresql://postgres@localhost:5432/reign'
 PINO_LOG_LEVEL='info'
