--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,15 @@ jobs:
   coverage-test:
     runs-on: ubuntu-latest
     steps:
-      - env:
-          SNAPLET_ACCESS_TOKEN: ${{ secrets.SNAPLET_ACCESS_TOKEN }}
-          SNAPLET_DATABASE_ID: <snaplet-database-id>
-          PGHOST: localhost
-          PGUSER: postgres
-          PGPASSWORD: postgres
-          PGPORT: 5432
-          PGDATABASE: postgres_db
-          DATABASE_URL: postgres://localhost:5432/postgres_db
+      env:
+        SNAPLET_ACCESS_TOKEN: ${{ secrets.SNAPLET_ACCESS_TOKEN }}
+        SNAPLET_DATABASE_ID: <snaplet-database-id>
+        PGHOST: localhost
+        PGUSER: postgres
+        PGPASSWORD: postgres
+        PGPORT: 5432
+        PGDATABASE: postgres_db
+        DATABASE_URL: postgres://localhost:5432/postgres_db
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Node 16
