--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Node 16
         uses: actions/setup-node@v3
-      - with: {node-version: 16}
+        with: {node-version: 16}
       - name: Postgres Docker image with "baked-in" data
         uses: snaplet/publish-postgres-with-data-docker-action@main
       - name: Install dependencies
