--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
       - name: Set up Node 16
         uses: actions/setup-node@v3
         with: {node-version: 16}
-      - name: Postgres Docker image with "baked-in" data
-        uses: snaplet/publish-postgres-with-data-docker-action@main
+      - name: Postgres Docker
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: '11'
       - name: Install dependencies
         run: npm install
       - name: Run tests and collect coverage
