--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         uses: harmon758/postgresql-action@v1
         with:
           postgresql version: '11'
+          postgresql db: $PGDATABASE
       - name: Install dependencies
         run: npm install
       - name: Run tests and collect coverage
