--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,6 @@ jobs:
   coverage-test:
     runs-on: ubuntu-latest
     env:
-      SNAPLET_ACCESS_TOKEN: ${{ secrets.SNAPLET_ACCESS_TOKEN }}
-      SNAPLET_DATABASE_ID: <snaplet-database-id>
       PGHOST: localhost
       PGUSER: postgres
       PGPASSWORD: postgres
@@ -21,8 +19,7 @@ jobs:
       - name: Postgres Docker
         uses: harmon758/postgresql-action@v1
         with:
-          postgresql version: '11'
-          postgresql db: $PGDATABASE
+          postgresql db: postgres_db
       - name: Install dependencies
         run: npm install
       - name: Run tests and collect coverage
