--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Set up Node 16
         uses: actions/setup-node@v3
         with: {node-version: 16}
-      - name: Postgres Docker
-        uses: harmon758/postgresql-action@v1
+      - uses: huaxk/postgis-action@v1
         with:
+          postgresql version: '11'
           postgresql db: postgres_db
       - name: Install dependencies
         run: npm install
