--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       PGPASSWORD: postgres
       PGPORT: 5432
       PGDATABASE: postgres_db
-      DATABASE_URL: postgres://localhost:5432/postgres_db
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres_db
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -19,7 +19,9 @@ jobs:
       - uses: huaxk/postgis-action@v1
         with:
           postgresql version: '11'
-          postgresql db: postgres_db
+          postgresql db: $PGDATABASE
+          postgresql user: $PGUSER
+          postgresql password: $PGPASSWORD
       - name: Install dependencies
         run: npm install
       - name: Run tests and collect coverage
